# viam-pi-ai-camera

./: .gitignore  .viam-gen-info  README.md  meta.json  pyproject.toml  run.sh  setup.sh
src/: main.py
