[project]
name = "viam-pi-ai-camera"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10.3",
    "typing-extensions>=4.12.2",
    "viam-sdk==0.35.0",
]

[dependency-groups]
dev = [
    "numpy>=2.2.0",
    "pillow>=11.0.0",
]
