[project]
name = "viam-pi-ai-camera"
version = "0.2.1"
description = "A modular resource for Viam machines to enable using the Raspberry Pi AI camera for computer vision tasks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10.3",
    "typing-extensions>=4.12.2",
    "viam-sdk==0.43.0",
]

[dependency-groups]
dev = [
    "numpy>=2.2.0",
    "pillow>=11.0.0",
]
